--- a/src/ml/tests/tools/a.ipynb
+++ b/src/ml/tests/tools/a.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3d2f2c07",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
     "import os\n",
     "\n",
     "# Config API Key\n",
-    "genai.configure(api_key='AIzaSyDeadrMpoB9wY3d0If65C0IL8jfrCGeQMs')\n",
+    "genai.configure(api_key=os.environ[\"GOOGLE_API_KEY\"])\n",
     "\n",
     "# Load ảnh\n",
     "def image_to_bytes(path):\n",
